chore: dispatcher trigger 추가
# --------------------
### 제목
# 커밋 타입: 작업내용 (제목과 본문은 한 줄 띄워주세요)

### 본문 - 한 줄에 최대 72 글자까지만 입력하기
# 무엇을, 왜, 어떻게 했는지

# 꼬리말
# (선택) 이슈번호 작성

#   [커밋 타입]  리스트
#   feat      : 기능 (새로운 기능)
#   fix       : 버그 (버그 수정)
#   design    : CSS 등 사용자 UI 디자인 변경
#   refactor  : 리팩토링
#   style     : 스타일 (코드 형식, 세미콜론 추가: 비즈니스 로직에 변경 없음)
#   docs      : 문서 (문서 추가, 수정, 삭제)
#   test      : 테스트 (테스트 코드 추가, 수정, 삭제: 비즈니스 로직에 변경 없음)
#   chore     : 기타 변경사항 (빌드 스크립트 수정 등)
#   post      : 블로그 포스트 추가 (신규 포스트 작성 및 수정)
#   rename    : 파일 혹은 폴더명을 수정하거나 옮기는 작업만 하는 경우
#   remove    : 파일을 삭제하는 작업만 수행한 경우
# ------------------
#   [체크리스트]
#     제목 첫 글자는 대문자로 작성했나요?
#     제목은 명령문으로 작성했나요?
#     제목 끝에 마침표(.) 금지
#     제목과 본문을 한 줄 띄워 분리하기
#     본문에 여러줄의 메시지를 작성할 땐 "-"로 구분했나요?
# ------------------

--- a/.github/workflows/cicd-workflow-dev.yml
+++ b/.github/workflows/cicd-workflow-dev.yml
@@ -5,6 +5,14 @@ on:
     branches:
       - develop
 
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: "Deployment reason (optional)"
+        required: false
+        default: "manual deploy"
+        type: string
+
 jobs:
   build:
     runs-on: ubuntu-latest
