--- a/.github/workflows/auto-pr-labeler.yml
+++ b/.github/workflows/auto-pr-labeler.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
       - name: Check Labels
         id: labeler
-        uses: jimschubert/labeler-action@v1
+        uses: jimschubert/labeler-action@v2
         with:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_PAT}}
