--- a/.github/workflows/cicd-workflow-dev.yml
+++ b/.github/workflows/cicd-workflow-dev.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - develop
 
+  pull_request:
+    branches:
+      - develop
+
   workflow_dispatch:
     inputs:
       reason:
@@ -25,9 +29,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Docker build
-        run: docker build \
+        run: |
+          docker build . \
           --build-arg SPRING_PROFILE=dev \
-          -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:dev .
+          -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:dev
 
       - name: Docker push
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:dev
