--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,3 +20,18 @@ minio:
   accessKey: ${MINIO_ACCESS_KEY}
   secretKey: ${MINIO_SECRET_KEY}
   bucketName: ${MINIO_BUCKET_NAME}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+      base-path: ${MANAGEMENT_BASE_PATH}
+    jmx:
+      exposure:
+        exclude: "*"
+
+  prometheus:
+    metrics:
+      export:
+        enabled: true
