--- a/deployment/develop/nginx/nginx-blue.conf
+++ b/deployment/develop/nginx/nginx-blue.conf
@@ -6,8 +6,8 @@ server {
     listen 80;
     server_name _;
 
-    location /v1/ {
-        proxy_pass http://blue/v1;
+    location / {
+        proxy_pass http://blue;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
