--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,19 +10,12 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     open-in-view: false
-
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
-    baseline-version: 0
-    locations:
-      - classpath:db/migration
 
   web:
     resources:
