chore: 컨테이너 logfile 경로 수정

--- a/deployment/develop/docker-compose/docker-compose.blue.yml
+++ b/deployment/develop/docker-compose/docker-compose.blue.yml
@@ -14,7 +14,7 @@ services:
     networks:
       - docker_compose_backend
     volumes:
-      - /var/logs/dev:/app/logs/dev
+      - /var/logs/dev:/logs/dev
 
 networks:
   docker_compose_backend:
