chore: local 환경 flyway disable

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -21,6 +21,9 @@ spring:
     resources:
       add-mappings: false
 
+  flyway:
+    enabled: false
+
 logging:
   level:
     org.hibernate.SQL: debug
