--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,14 +17,33 @@ management:
 
 oauth:
   kakao:
-    client-id: ${CLIENT_ID}
-    client-secret: ${CLIENT_SECRET}
+    client-id: ${KAKAO_CLIENT_ID}
+    client-secret: ${KAKAO_CLIENT_SECRET}
     redirect-uri: ${OAUTH_REDIRECT_URI}
     client-name: kakao
     authorization-uri: https://kauth.kakao.com/oauth/authorize
     token-uri: https://kauth.kakao.com/oauth/token
     user-info-uri: https://kapi.kakao.com/v2/user/me
     scope: profile_nickname,profile_image
+  google:
+    client-id: ${GOOGLE_CLIENT_ID}
+    client-secret: ${GOOGLE_CLIENT_SECRET}
+    redirect-uri: ${OAUTH_REDIRECT_URI}
+    client-name: Google
+    authorization-uri: https://accounts.google.com/o/oauth2/auth
+    token-uri: https://oauth2.googleapis.com/token
+    user-info-uri: https://www.googleapis.com/oauth2/v1/userinfo
+    scope: email,profile
+  naver:
+    client-id: ${NAVER_CLIENT_ID}
+    client-secret: ${NAVER_CLIENT_SECRET}
+    redirect-uri: ${OAUTH_REDIRECT_URI}
+    client-name: naver
+    authorization-uri: https://nid.naver.com/oauth2.0/authorize
+    token-uri: https://nid.naver.com/oauth2.0/token
+    user-info-uri: https://openapi.naver.com/v1/nid/me
+    state: ${NAVER_STATE}
+
 
 jwt:
   client-secret: ${JWT_SECRET}
