Chore: 로컬에서 data sql로 초기 데이터 삽입

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,6 +9,7 @@ spring:
     password: ${PASSWORD}
 
   jpa:
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
     show-sql: true
@@ -16,6 +17,7 @@ spring:
       hibernate:
         format_sql: true
     open-in-view: false
+  sql.init.mode: always
 
   web:
     resources:
@@ -23,7 +25,6 @@ spring:
 
   flyway:
     enabled: false
-
 logging:
   level:
     org.hibernate.SQL: debug
