--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -12,6 +12,7 @@ spring:
       hibernate:
         show-sql: false
         format_sql: false
+        default_batch_fetch_size: 100
 
   data:
     redis:
