chore: script 실패 시 워크플로우 실패 처리

--- a/.github/workflows/cicd-workflow-dev.yml
+++ b/.github/workflows/cicd-workflow-dev.yml
@@ -57,6 +57,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script_stop: true
           script: |
             echo "Pulling latest image..."
             docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGENAME }}:dev
