--- a/deployment/develop/nginx/nginx-green.conf
+++ b/deployment/develop/nginx/nginx-green.conf
@@ -2,9 +2,11 @@ upstream green {
     server 127.0.0.1:8082;
 }
 
+include /etc/nginx/ssl.conf;
+
 server {
-    listen 80;
-    server_name _;
+    listen 443 ssl http2;
+    server_name lettie.me www.lettie.me;
 
     location / {
         proxy_pass http://green;
