--- a/deployment/develop/nginx/nginx-green.conf
+++ b/deployment/develop/nginx/nginx-green.conf
@@ -16,4 +16,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
     }
+
+    location /s3/ {
+        proxy_pass http://127.0.0.1:9090/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header Connection "";
+        client_max_body_size 0;
+        proxy_request_buffering off;
+        proxy_buffering off;
+    }
 }
