--- a/deployment/develop/nginx/nginx-green.conf
+++ b/deployment/develop/nginx/nginx-green.conf
@@ -5,7 +5,8 @@ upstream green {
 include /etc/nginx/ssl.conf;
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name lettie.me www.lettie.me;
 
     location / {
@@ -15,15 +16,5 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
-    }
-
-    location /s3/ {
-        proxy_pass http://127.0.0.1:9090/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header Connection "";
-        client_max_body_size 0;
-        proxy_request_buffering off;
-        proxy_buffering off;
     }
 }
