--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -37,5 +37,5 @@ logging:
     org.hibernate.orm.jdbc.bind: trace
 
 cookie:
-  secure: true
-  same-site: None
+  secure: false
+  same-site: Strict
