chore: nginx domain name 변경

--- a/deployment/develop/nginx/nginx-blue.conf
+++ b/deployment/develop/nginx/nginx-blue.conf
@@ -7,7 +7,7 @@ include /etc/nginx/ssl.conf;
 server {
     listen 443 ssl;
     http2 on;
-    server_name lettie.me www.lettie.me;
+    server_name api-dev.lettie.me;
 
     location / {
         proxy_pass http://blue;
