--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,6 +7,10 @@ spring:
     url: ${URL}
     username: ${USERNAME}
     password: ${PASSWORD}
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
   jpa:
     hibernate:
