--- a/deployment/prod/docker-compose/docker-compose.green.yml
+++ b/deployment/prod/docker-compose/docker-compose.green.yml
@@ -1,20 +1,20 @@
 version: "3.8"
 services:
   green:
-    image: jhzlo/yapp:dev
+    image: jhzlo/yapp:prod
     container_name: green
     ports:
       - "8082:8080"
     env_file:
-      - ../.env.dev
+      - ../.env.prod
     environment:
       - TZ=Asia/Seoul
-      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_PROFILES_ACTIVE=prod
     restart: always
     networks:
       - docker_compose_backend
     volumes:
-      - /var/logs/dev:/logs/dev
+      - /var/logs/prod:/logs/prod
 
 networks:
   docker_compose_backend:
