--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,6 +14,12 @@ spring:
         format_sql: false
         default_batch_fetch_size: 100
 
+  flyway:
+    enabled: true
+    baseline-version: 0
+    locations:
+      - classpath:db/migration
+
   data:
     redis:
       host: ${REDIS_HOST}
