--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -32,6 +32,21 @@ minio:
   secretKey: ${MINIO_SECRET_KEY}
   bucketName: ${MINIO_BUCKET_NAME}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+      base-path: ${MANAGEMENT_BASE_PATH}
+    jmx:
+      exposure:
+        exclude: "*"
+
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+
 cookie:
   secure: true
   same-site: None
