chore: 운영계 apm volume 추가

--- a/deployment/prod/docker-compose/docker-compose.blue.yml
+++ b/deployment/prod/docker-compose/docker-compose.blue.yml
@@ -15,6 +15,7 @@ services:
       - docker_compose_backend
     volumes:
       - /var/logs/prod:/logs/prod
+      - /opt/elastic/apm:/opt/elastic/apm:ro
 
 networks:
   docker_compose_backend:
